<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">



    <TextView android:text="@string/Bill_text_view" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BilltextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/BilleditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BilleditText"
        android:ems="7"
        android:text="@string/Bill_edit_text"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/BilltextView"
        android:layout_toEndOf="@+id/BilltextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tip_text_view"
        android:id="@+id/TiptextView"
        android:layout_alignTop="@+id/BilleditText"
        android:layout_toRightOf="@+id/BilleditText"
        android:layout_toEndOf="@+id/BilleditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TipeditText"
        android:layout_alignTop="@+id/TiptextView"
        android:layout_toRightOf="@+id/TiptextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Tip_edit_text"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Final_text_view"
        android:id="@+id/FinalbilltextView"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/TipeditText"
        android:layout_toRightOf="@+id/BilleditText"
        android:layout_toEndOf="@+id/BilleditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FinalbilleditText"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/FinalbilltextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/FinalbilltextView"
        android:layout_toEndOf="@+id/FinalbilltextView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Change_tip_text_view"
        android:id="@+id/ChangetextView"
        android:layout_alignBottom="@+id/FinalbilltextView"
        android:layout_toLeftOf="@+id/FinalbilltextView"
        android:layout_toStartOf="@+id/FinalbilltextView" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ChangeTipseekBar"
        android:layout_below="@+id/FinalbilleditText"
        android:layout_alignLeft="@+id/ChangetextView"
        android:layout_alignStart="@+id/ChangetextView"
        android:progress="15"
        android:indeterminate="false" />


</RelativeLayout>
